force-app/main/default/objects/Transformation_Rule__mdt/Transformation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Transformation Rule</label>
    <pluralLabel>Transformation Rules</pluralLabel>
</CustomObject>