force-app/main/default/objects/Transformation_Rule__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The field type which is being transformed. For things like Currency, Phone, Email, etc these can be handled as text or number (if preferred)</description>
    <inlineHelpText>The field type which is being transformed. For things like Currency, Phone, Email, etc these can be handled as text or number (if preferred)</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multipicklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>