force-app/main/default/objects/Transformation_Rule__mdt/fields/Map_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Instead of mapping from the FROM field on the source to the TO field on the target, map the entirety of the FROM field to the Target RECORD. (From field expected as JSON)</inlineHelpText>
    <label>Map to Record</label>
    <type>Checkbox</type>
</CustomField>