force-app/main/default/objects/Transformation_Rule__mdt/fields/To_Field__c.field-meta.xml
<CustomField>
    <fullName>To_Field__c</fullName>
    <description>The field where the mapped data is saved TO, i.e. the target record&#39;s field.</description>
    <inlineHelpText>The field where the mapped data is saved TO, i.e. the target record&#39;s field.</inlineHelpText>
    <label>To Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>