force-app/main/default/objects/Transformation_Rule__mdt/fields/Transformation_Record__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Record__c</fullName>
    <label>Record</label>
    <referenceTo>Transformation_Record__mdt</referenceTo>
    <relationshipLabel>Transformation Rules</relationshipLabel>
    <relationshipName>Transformation_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>