force-app/main/default/objects/Transformation_Rule__mdt/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <description>Used to translate certain values to other values during the transformation. Pipe separated text for each translation. I.e. for &quot;1=PHD Applicant|2=Graduate|3=Skilled&quot; when we have &quot;2&quot; in the source field, &quot;Graduate&quot; is placed in the target field.</description>
    <inlineHelpText>Used to translate certain values to other values during the transformation. Pipe separated text for each translation. I.e. for &quot;1=PHD Applicant|2=Graduate|3=Skilled&quot; when we have &quot;2&quot; in the source field, &quot;Graduate&quot; is placed in the target field.</inlineHelpText>
    <label>Translation</label>
    <type>TextArea</type>
</CustomField>