force-app/main/default/objects/Transformation_Rule__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>If no &#39;From&#39; field is specified, or if it is BLANK, then this value is sent to the &#39;To&#39; field  for all records instead.</description>
    <inlineHelpText>If no &#39;From&#39; field is specified, or if it is BLANK, then this value is sent to the &#39;To&#39; field  for all records instead.

If both &#39;From&#39; and &#39;Value&#39; are blank and there are no other transformation rules, an empty record is created.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>